Fixed the issue of mobile clipping

--- a/CSS/about.css
+++ b/CSS/about.css
@@ -21,40 +21,44 @@
   font-family: Graphik_Normal;
   line-height: 30px;
 }
-#about_us_text{
-  text-align: center; 
+#about_us_text {
+  text-align: center;
   font-size: 60px;
   padding: 20px;
   font-family: Graphik_Bold;
+  background-image: linear-gradient(to right, gold, black);
+  color: transparent;
+  -webkit-background-clip: text;
+  background-clip: text;
 }
-.vision_and_mission{
-    padding: 20px;
-    text-align: center;
+.vision_and_mission {
+  padding: 20px;
+  text-align: center;
   margin: 50px 15%;
   background-color: #ffa200;
-  max-height: 350px;
+  max-height: 500px;
   border-radius: 30px;
   max-width: 700px;
 }
-.vision_and_mission h1{
+.vision_and_mission h1 {
   font-size: 40px;
   padding: 20px;
 }
 .vision_and_mission .vision_and_mission_image {
-    width: 150px;
-    height: 150px;
+  width: 150px;
+  height: 150px;
 }
-.vision_and_mission .vision_and_mission_image img{
-    width: 100%;
-    height: 100%;
-  }
-  .our_values{
-    padding: 50px 15%;
-  }
-  .our_values > h1{
-    color: #ffa200;
-  }
-  .value{
+.vision_and_mission .vision_and_mission_image img {
+  width: 100%;
+  height: 100%;
+}
+.our_values {
+  padding: 50px 15%;
+}
+.our_values > h1 {
+  color: #ffa200;
+}
+.value {
   margin-top: 20px;
   max-width: 700px;
   padding: 20px;
@@ -62,9 +66,23 @@
   border-radius: 20px;
   box-shadow: 2px 2px 20px black;
 }
-.community_focus{
+.community_focus {
   padding: 50px 15%;
 }
-.community_focus li{
+.community_focus .focus{
+  box-shadow: -2px 0 20px -6px black;
+  padding: 0 20px 0 20px;
+  border-radius: 10px;
+  padding: 20px;
+  max-width: 700px;
+}
+.community_focus li {
   list-style: square;
+}
+
+@media (max-width: 767px) {
+  .vision_and_mission .vision_and_mission_image {
+    width: 100px;
+    height: 100px;
+  }
 }
